# py_hooker

./: README.md  pyproject.toml
src/py_process_hooker/: __init__.py  hook32.py  hook64.py  inject_dll.py  winapi.py
tests/: case.py
